--- a/library-frontend/src/index.css
+++ b/library-frontend/src/index.css
@@ -15,3 +15,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(30px) scale(0.9);
+    
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px) scale(1);
+    
+  }
+}
+
+@keyframes fade-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px) scale(1);
+    
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px) scale(1);
+    
+  }
+}
+
+@keyframes fade-in {
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
